--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a class="logo header__logo link" lang="en" href="./index.html">
+          <a class="logo header__logo link" lang="en" href="#">
             <span class="logo__text">Web</span>Studio
           </a>
 
@@ -71,7 +71,7 @@
           </li>
         </ul>
       </div>
-      <div class="mobile-menu transition" data-menu>
+      <div class="mobile-menu is-hidden" data-menu>
         <div class="container mobile-menu__container">
           <button type="button" class="mobile-menu__btn--close" data-menu-close>
             <svg class="mobile-menu__icon">
@@ -351,28 +351,28 @@
                 <p class="team__description" lang="en">Product Designer</p>
                 <ul class="social">
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -442,28 +442,28 @@
                 <p class="team__description" lang="en">Frontend Developer</p>
                 <ul class="social">
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -533,28 +533,28 @@
                 <p class="team__description" lang="en">Marketing</p>
                 <ul class="social">
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -624,28 +624,28 @@
                 <p class="team__description" lang="en">UI Designer</p>
                 <ul class="social">
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="team-social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item list">
-                    <a href="" class="social__link link">
+                    <a href="#" class="social__link link">
                       <svg class="social__icons" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -663,42 +663,42 @@
           <h2 class="customers__title hidden">Постоянные клиенты</h2>
           <ul class="customers__list list">
             <li class="customers__item">
-              <a href="" class="customers__link link">
+              <a href="#" class="customers__link link">
                 <svg class="customers__icons" width="41" height="47">
                   <use href="./images/sprite.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="" class="customers__link link">
+              <a href="#" class="customers__link link">
                 <svg class="customers__icons" width="41" height="47">
                   <use href="./images/sprite.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="" class="customers__link link">
+              <a href="#" class="customers__link link">
                 <svg class="customers__icons" width="41" height="47">
                   <use href="./images/sprite.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="" class="customers__link link">
+              <a href="#" class="customers__link link">
                 <svg class="customers__icons" width="41" height="47">
                   <use href="./images/sprite.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="" class="customers__link link">
+              <a href="#" class="customers__link link">
                 <svg class="customers__icons" width="41" height="47">
                   <use href="./images/sprite.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="" class="customers__link link">
+              <a href="#" class="customers__link link">
                 <svg class="customers__icons" width="41" height="47">
                   <use href="./images/sprite.svg#icon-logo-6"></use>
                 </svg>
@@ -740,28 +740,28 @@
             <h3 class="footer__title">присоединяйтесь</h3>
             <ul class="social footer--social">
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
