--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
           </li>
         </ul>
       </div>
-      <div class="mobile-menu transition" data-menu>
+      <div class="mobile-menu is-hidden" data-menu>
         <div class="container mobile-menu__container">
           <button type="button" class="mobile-menu__btn--close" data-menu-close>
             <svg class="mobile-menu__icon">
@@ -149,7 +149,7 @@
             <!-- CARDS -->
             <ul class="projects__list list">
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -222,7 +222,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -294,7 +294,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -366,7 +366,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -438,7 +438,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -510,7 +510,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -582,7 +582,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -654,7 +654,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -726,7 +726,7 @@
                 </a>
               </li>
               <li class="projects__item">
-                <a href="" class="projects__link link">
+                <a href="#" class="projects__link link">
                   <div class="projects__wrap">
                     <picture>
                       <source
@@ -835,28 +835,28 @@
             <h3 class="footer__title">присоединяйтесь</h3>
             <ul class="social footer--social">
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item list">
-                <a href="" class="social__link footer--icon link">
+                <a href="#" class="social__link footer--icon link">
                   <svg class="social__icons" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
