--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -23,7 +24,7 @@
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body>
+  <body data-no-scroll>
     <!-- HEADER -->
     <header class="header">
       <div class="container header-container">
@@ -72,7 +73,7 @@
         </ul>
       </div>
       <div class="mobile-menu is-hidden" data-menu>
-        <div class="container mobile-menu__container">
+        <div class="mobile-menu__container">
           <button type="button" class="mobile-menu__btn--close" data-menu-close>
             <svg class="mobile-menu__icon">
               <use href="./images/sprite.svg#icon-close"></use>
